--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +16,9 @@
     "express": "^4.8.8",
     "express-load": "^1.1.15",
     "express-session": "^1.7.6",
+    "helmet": "^0.4.2",
     "method-override": "^2.1.3",
+    "mongo-sanitize": "^1.0.0",
     "mongodb": "^1.4.40",
     "mongoose": "^3.8.40",
     "mongoose-findorcreate": "^0.1.2",
