--- a/src/package.json
+++ b/src/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Rodrigo Souza",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.6.7",
     "cookie-parser": "^1.3.5",
@@ -24,5 +24,13 @@
     "mongoose-findorcreate": "^0.1.2",
     "passport": "^0.2.2",
     "passport-github": "^0.1.5"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-ng-annotate": "^0.5.0",
+    "grunt-usemin": "^2.6.2"
   }
 }
