--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,11 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-ng-annotate": "^0.5.0",
-    "grunt-usemin": "^2.6.2"
+    "grunt-usemin": "^2.6.2",
+    "jasmine": "^2.6.0",
+    "jasmine-core": "^2.6.2",
+    "karma": "^0.12.37",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-jasmine": "^1.1.0"
   }
 }
