--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_script:
 	- cd dist
 
 script:
-- karma start config/karma.config.js --single-run --browsers PhantomJS
+- karma start src/config/karma.config.js --single-run --browsers PhantomJS
