--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ notifications:
   - rsouza01@gmail.com
 
 before_install:
+  - cd src
   - npm install -g bower@1.3
   - npm install -g grunt-cli@0.1
   - npm install -g karma-cli@0.0
