--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ before_script:
   - cd dist
 
 script:
-  - karma start src/config/karma.config.js --single-run --browsers PhantomJS
+  - karma start config/karma.config.js --single-run --browsers PhantomJS
