Final adjustments in the code.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 
 language: node_js
 
-
 node_js:
   - 0.10
+
 notifications:
   - rsouza01@gmail.com
+
+services:
+  - mongodb
+
+env:
+  global:
+    - NODE_ENV: test
+
+addons:
+  sauce_connect: true
 
 before_install:
   - cd src
@@ -17,8 +27,12 @@ before_install:
   - bower install
 
 before_script:
+  - node test/data.js
   - grunt
   - cd dist
 
 script:
   - karma start config/karma.config.js --single-run --browsers PhantomJS
+  - node server &
+  - protractor config/protractor.js
+
