--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
     "karma": "^0.12.37",
     "karma-chrome-launcher": "^2.1.1",
     "karma-jasmine": "^1.1.0",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "^0.1.4"
   }
 }
